syntax = "proto3";

option go_package = "github.com/Snowflake-Labs/sansshell/services/exec";

package Exec;

// The Exec service definition.
service Exec {
  // Run takes input, executes it and returns result of input execution
  rpc Run (ExecRequest) returns (ExecResponse) {}
}

// ExecRequest describes what to execute
message ExecRequest {
  string command = 1;
  repeated string args = 2;
}

// ExecResponse describes output of execution
message ExecResponse {
  bytes stdout = 1;
  bytes stderr = 2;
  int32 retCode = 3;
}
